# Recommendation-Website

./: .gitignore  AGENTS.md  README.md  docker-command.md  run.py  skills-lock.json
app/: .dockerignore  .env.development  .env.example  PYTHON-COMMAND.md  config.py  lifespan.py  main.py  pyproject.toml  requirements.txt
app/api/: endpoint.md
app/api/v1/applicants/: __init__.py  base.py
app/api/v1/jobs/: base.py
app/core/: provider.py  security.py  uow.py
app/core/exceptions/: __init__.py  base.py  business.py
app/data/: connectDatabase.py
app/db/: base.py  seed_data.py  session.py  utils.py
app/debug/: .env
app/mappers/: mapper_applicant.py
app/migrations/: env.py
app/migrations/versions/: 5378db338fa7_add_gpa_to_cv.py  728cdb1eea9a_baseline.py  99749c9a8bba_init_database_again.py  b11220ec88c4_add_dob_for_applicant_and_opening_date_.py
app/models/: ApplicantStatusEnum.py  GenderEnum.py  MethodEnum.py  Role.py  __init__.py  applicant.py  applicant_jd.py  association.py  conversation.py  cv.py  enums.py  job_description.py  message.py  permission.py  recruiter.py  role.py  user.py
app/pgdata/: postmaster.pid
app/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
app/pgdata/pg_stat/: pgstat.stat
app/pgdata/pg_xact/: 0000
app/repositories/: applicant_repository.py  job_repository.py  user_repository.py
app/routes/: api.py
app/schemas/response/: job_response.py  user_login_response.py
app/services/: applicant_service.py  job_service.py
app/tests/: test_applicant_auth_api.py  test_jobs_api.py  test_mapper_applicant.py
(+91 files in other folders)
